--- a/Dockerfile.Postgres
+++ b/Dockerfile.Postgres
@@ -1,3 +1,22 @@
-FROM postgres
-RUN mkdir -p /logs
-RUN chown postgres:postgres /logs
+# Use the official PostgreSQL image as the base
+FROM postgres:latest
+
+# Set environment variables
+ENV POSTGRES_DB=latency
+ENV POSTGRES_USER=postgres
+ENV POSTGRES_PASSWORD=123456
+ENV PGDATA=/var/lib/postgresql/data/pgdata
+
+# Create the logging directory and adjust permissions
+USER root
+
+RUN mkdir -p /var/log/postgresql
+RUN chmod -R 0700 /var/log/postgresql
+RUN chown -R postgres:postgres /var/log/postgresql
+
+
+# Switch back to the postgres user for safety
+USER postgres
+
+# Set the default command to run PostgreSQL with customized logging settings
+CMD ["postgres", "-c", "logging_collector=on", "-c", "log_directory=/var/log/postgresql", "-c", "log_min_duration_statement=0", "-c", "log_filename ='postgresql-%Y-%m-%d_%H%M%S.log'"]
